增加快捷支付

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "ext-simplexml": "*",
     "ext-libxml": "*",
     "ext-curl": "*",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "ext-openssl": "*"
   },
   "autoload": {
     "psr-4": {
